# aadb

./: .gitignore  gradle.properties  settings.gradle.kts
adb/: CMakeCache.txt  CMakeLists.txt  adb.cpp  adb_mdns.h  compression_utils.h  platform_tools_version.h  transport.cpp
adb/client/: adb_client.cpp  adb_mdns_stub.cpp  commandline.cpp  fastdeploy.h  fastdeploy_stub.cpp  file_sync_client.cpp  incremental_stub.cpp  main.cpp  transport_mdns_stub.cpp  transport_usb_stub.cpp  usb_stub.cpp
adb/cutils/: sockets.cpp  sockets.h
adb/fdevent/: fdevent.cpp
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/torpos/rooter/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  adbhost_jni.cpp
app/src/main/java/com/torpos/aadb/: MainActivity.kt
app/src/main/java/com/torpos/aadb/native/: AdbNative.kt
app/src/main/java/com/torpos/aadb/service/: AdbHostNotification.kt  AdbHostNotificationReceiver.kt  AdbHostService.kt
app/src/main/java/com/torpos/aadb/state/: AdbHostRepository.kt  AdbHostState.kt  AdbServiceDiscovery.kt  AddressUtils.kt
app/src/main/java/com/torpos/aadb/ui/: AdbHostScreen.kt
app/src/main/java/com/torpos/aadb/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/torpos/rooter/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build_adb_android.sh
